--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next -p 1960",
     "build": "next build",
     "start": "next build && next start -p $PORT",
+    "start-default": "next start",
     "export": "next export"
   },
   "dependencies": {
