--- a/package.json
+++ b/package.json
@@ -2,18 +2,34 @@
   "name": "face-accreditation",
   "version": "0.1.0",
   "description": "AI Powered voter accreditation for elections and polls",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next -p 1960",
-    "build": "next build",
-    "start": "next build && next start -p $PORT",
-    "start-default": "next start",
+    "start": "node ./bin/www",
+    "next-dev": "next -p 1960",
+    "next-build": "next build",
+    "start-next": "next build && next start -p $PORT",
+    "start-next-default": "next start",
+    "watch": "nodemon \"npm start\"",
+    "preinstall": "node preinstall.js",
     "export": "next export"
   },
   "dependencies": {
     "next": "^7.0.0",
     "react": "^16.5.1",
-    "react-dom": "^16.5.1"
+    "react-dom": "^16.5.1",
+    "@google-cloud/datastore": "^2.0.0",
+    "connect-busboy": "0.0.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "fs-extra": "^7.0.0",
+    "hbs": "~4.0.1",
+    "http-errors": "~1.6.2",
+    "moment": "^2.22.2",
+    "morgan": "~1.9.0",
+    "multer": "^1.4.1",
+    "nodemon": "^1.18.4",
+    "request": "^2.88.0"
   },
   "repository": {
     "type": "git",
