--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "fs-extra": "^7.0.0",
-    "hbs": "~4.0.1",
+    "hbs": "^4.0.6",
     "http-errors": "~1.6.2",
     "moment": "^2.22.2",
     "morgan": "~1.9.0",
